2016-04-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-470

	* src/main.cc: Display OEM/C++11 status in arts -v output.

	* src/methods.cc, src/m_oem.cc, src/CMakeLists.txt:

	Instead of removing the oem WSM completely if C++11 support is not
	available, replace it with a dummy function that output a runtime error
	to give the user information what he has to do to enable OEM. This
	makes OEM consistent with the behaviour of other optional features in
	ARTS.

2016-04-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-469

	* src/m_oem.cc (setup_xa): Had missed to add handling of
	pointing and baseline fits.

2016-04-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-468

	* src/m_oem.cc (oem_template): Added jacobian.resize(0,0); +
	comments before first call of inversion_iterate_agenda.

	* src/agendas.cc: Added jacobian as input to inversion_iterate_agenda.

	* src/m_jacobian.cc (jacobianCalcPointingZaRecalc): Fixed typo in
	a comment

	* src/special_interp.cc (regrid_atmfield_by_gp): itw was given
	wrong side for 2D and 3D.

	* src/m_oem.cc (setup_xa): Added handling of logrel for VMR.

	* src/m_oem.cc (x2arts_std): Added handling of logrel for VMR.
	Baseline fit and pointing off-set parts were wrong. Thinsg
	improved, but these parts are not yet tested practically.

	* src/m_basic_types.cc (VectorExtractFromMatrix)
	(MatrixExtractFromTensor3): These WSMs are now placed in this file.

	(VectorReshapeMatrix): New WSM.

	* src/m_batch.cc (VectorExtractFromMatrix)
	(MatrixExtractFromTensor3): Moved to other file.

2016-04-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-467

	* Some additions around oem, but nothing really tested.

	* src/m_basic_types.cc (VectorAddVector, VectorSubtractVector):
	New WSMs.

	* src/m_oem.cc (x2arts_std): Extended to handle baseline fits and
	pointing off-sets.

	* src/m_jacobian.cc (jacobianAddPolyfit): Initial error message
	was wrong.

	* src/workspace.cc: Added y_baseline.
